GitHub URL update

--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=1.0.0
 pkgrel=1
 pkgdesc="A GUI tool for creating and managing Wine prefixes with ease"
 arch=('any')
-url="https://github.com/yourusername/wine-prefix-automation"
+url="https://github.com/DhanushSantosh/WinePrefix-Automation.git"
 license=('MIT')
 depends=('wine' 'zenity' 'git')
 optdepends=('winetricks: For installing Windows components'
